# blogscraper

./: .env.example  .gitignore  README.md  get_cookies.py  main.py  pyproject.toml  requirements.txt  test_credentials.py
pdf_generator/: generator.py  image_optimizer.py
pdf_generator/templates/: base.html
scrapers/: base_scraper.py  substack.py  wordpress.py
